--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  azureServiceConnection: 'demo'     # your service connection name
+  azureServiceConnection: 'sc-html-app-rg'     # your service connection name
   webAppName: 'YOUR-APP-SERVICE-NAME'
   artifactName: 'drop'
   packagePath: '$(Build.ArtifactStagingDirectory)/site.zip'
